<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity$PlaceholderFragment">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffffff"
        android:layout_alignParentBottom="true"
        android:id="@+id/frameLayout"
        android:padding="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:layout_gravity="right|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/welcomeText"
                android:id="@+id/titol"
                android:layout_gravity="center_horizontal"
                android:textSize="35dp"
                android:textStyle="bold"
                android:textColorHighlight="#ff333333"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="307dp"
                android:layout_height="142dp"
                android:id="@+id/logoJedi"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_jedi"
                android:layout_marginBottom="35dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nameInput"
                android:layout_gravity="center_horizontal"
                android:hint="@string/name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/surnameInput"
                android:layout_gravity="center_horizontal"
                android:hint="@string/surname"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/mailInput"
                android:layout_marginTop="10dp"
                android:hint="@string/mailHint"
                android:inputType="textEmailAddress"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:id="@+id/submitButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_weight="0.05"
                android:background="#ff5177b3"
                android:clickable="true"
                android:textColor="#ffffffff"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
